# irl_robots

./: CMakeLists.txt  IRLRobotProject.pro  LICENSE  README.md  package.xml  r3fg_port.sh  ur5_ip.sh  ur5_jpub.sh
launch/: baxter_teleop.launch  ur5_teleop.launch
msg/: gSimpleControl.msg  matrix.msg  r2fgControl.msg  r2fgStatus.msg  r3fgControl.msg  r3fgFingerControl.msg  r3fgFingerStatus.msg  r3fgStatus.msg  ur5Control.msg  ur5Joints.msg  ur5Status.msg  ur5Tool.msg
param/: config.yaml  virtual_config.yaml
scripts/: baxter_teleop.py  baxter_teleop_kinect.py  ur5_teleop.py
src/football_virtual/: football.cpp  football.h  main.cpp
src/r2fg/: main.cpp  r2fgripper.cpp  r2fgripper.h
src/r3fg/: main.cpp  r3fgnetwork.cpp  r3fgnetwork.h  r3fgripper.cpp  r3fgripper.h  r3fgros.cpp  r3fgros.h
src/ur5/: main.cpp  ur5controller.cpp  ur5controller.h  ur5network.cpp  ur5network.h  ur5ros.cpp  ur5ros.h
src/ur5_continuous_controller/: main.cpp  ur5_continuous_controller.cpp  ur5_continuous_controller.h
src/ur5_virtual/: main.cpp  ur5network.cpp  ur5network.h
srv/: ur5SrvControl.srv
