cmake_minimum_required(VERSION 2.8.3)
project(irl_robots)

set(CMAKE_VERBOSE_MAKEFILE on)

add_definitions(-std=c++14)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED COMPONENTS
  roscpp
  std_msgs
  tf
  message_generation
)

## System dependencies are found with CMake's conventions
# find_package(Boost REQUIRED COMPONENTS system)

#set(CMAKE_PREFIX_PATH "")

set(VREP_PATH "$ENV{HOME}/V-REP_PRO_EDU_V3_5_0_Linux")

find_library(vrep_LIBRARIES
    NAMES remoteApi
    PATHS ${VREP_PATH}/programming/remoteApiBindings/lib/lib/Linux/64Bit
)

## Uncomment this if the package has a setup.py. This macro ensures
## modules and global scripts declared therein get installed
## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
# catkin_python_setup()

################################################
## Declare ROS messages, services and actions ##
################################################

## To declare and build messages, services or actions from within this
## package, follow these steps:
## * Let MSG_DEP_SET be the set of packages whose message types you use in
##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
## * In the file package.xml:
##   * add a build_depend tag for "message_generation"
##   * add a build_depend and a run_depend tag for each package in MSG_DEP_SET
##   * If MSG_DEP_SET isn't empty the following dependency has been pulled in
##     but can be declared for certainty nonetheless:
##     * add a run_depend tag for "message_runtime"
## * In this file (CMakeLists.txt):
##   * add "message_generation" and every package in MSG_DEP_SET to
##     find_package(catkin REQUIRED COMPONENTS ...)
##   * add "message_runtime" and every package in MSG_DEP_SET to
##     catkin_package(CATKIN_DEPENDS ...)
##   * uncomment the add_*_files sections below as needed
##     and list every .msg/.srv/.action file to be processed
##   * uncomment the generate_messages entry below
##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)

## Generate messages in the 'msg' folder
add_message_files(
  FILES
  ur5Control.msg
  ur5Joints.msg
  ur5Tool.msg
  ur5Status.msg
  r3fgFingerStatus.msg
  r3fgFingerControl.msg
  r3fgStatus.msg
  r3fgControl.msg
  r2fgStatus.msg
  r2fgControl.msg
  gSimpleControl.msg
  rows.msg
  matrix.msg
)

## Generate services in the 'srv' folder
add_service_files(
  FILES
  ur5SrvControl.srv
)

## Generate actions in the 'action' folder
# add_action_files(
#   FILES
#   Action1.action
#   Action2.action
# )

## Generate added messages and services with any dependencies listed here
generate_messages(
  DEPENDENCIES
  std_msgs
)

################################################
## Declare ROS dynamic reconfigure parameters ##
################################################

## To declare and build dynamic reconfigure parameters within this
## package, follow these steps:
## * In the file package.xml:
##   * add a build_depend and a run_depend tag for "dynamic_reconfigure"
## * In this file (CMakeLists.txt):
##   * add "dynamic_reconfigure" to
##     find_package(catkin REQUIRED COMPONENTS ...)
##   * uncomment the "generate_dynamic_reconfigure_options" section below
##     and list every .cfg file to be processed

## Generate dynamic reconfigure parameters in the 'cfg' folder
# generate_dynamic_reconfigure_options(
#   cfg/DynReconf1.cfg
#   cfg/DynReconf2.cfg
# )

###################################
## catkin specific configuration ##
###################################
## The catkin_package macro generates cmake config files for your package
## Declare things to be passed to dependent projects
## INCLUDE_DIRS: uncomment this if you package contains header files
## LIBRARIES: libraries you create in this project that dependent projects also need
## CATKIN_DEPENDS: catkin_packages dependent projects also need
## DEPENDS: system dependencies of this project that dependent projects also need
catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES irl_robots
#  CATKIN_DEPENDS roscpp std_msgs
#  DEPENDS system_lib
  CATKIN_DEPENDS message_runtime
)

###########
## Build ##
###########

## Specify additional locations of header files
## Your package locations should be listed before other locations
# include_directories(include)
include_directories(
  ${catkin_INCLUDE_DIRS}
)

## Declare a C++ library
# add_library(irl_robots
#   src/${PROJECT_NAME}/irl_robots.cpp
# )

## Add cmake target dependencies of the library
## as an example, code may need to be generated before libraries
## either from message generation or dynamic reconfigure
# add_dependencies(irl_robots ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})

## Declare a C++ executable
# add_executable(irl_robots_node src/irl_robots_node.cpp)

## Add cmake target dependencies of the executable
## same as for the library above
# add_dependencies(irl_robots_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})

## Specify libraries to link a library or executable target against
# target_link_libraries(irl_robots_node
#   ${catkin_LIBRARIES}
# )

#############
## Install ##
#############

# all install targets should use catkin DESTINATION variables
# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html

## Mark executable scripts (Python etc.) for installation
## in contrast to setup.py, you can choose the destination
# install(PROGRAMS
#   scripts/my_python_script
#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
# )

## Mark executables and/or libraries for installation
# install(TARGETS irl_robots irl_robots_node
#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
# )

## Mark cpp header files for installation
# install(DIRECTORY include/${PROJECT_NAME}/
#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
#   FILES_MATCHING PATTERN "*.h"
#   PATTERN ".svn" EXCLUDE
# )

## Mark other files for installation (e.g. launch and bag files, etc.)
# install(FILES
#   # myfile1
#   # myfile2
#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
# )

#############
## Testing ##
#############

## Add gtest based cpp test target and link libraries
# catkin_add_gtest(${PROJECT_NAME}-test test/test_irl_robots.cpp)
# if(TARGET ${PROJECT_NAME}-test)
#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
# endif()

## Add folders to be run by python nosetests
# catkin_add_nosetests(test)

############
## Custom ##
############

include_directories(include ${catkin_INCLUDE_DIRS} ${VREP_PATH}/programming/remoteApi ${VREP_PATH}/programming/include)

file(GLOB ur5_SRC "src/ur5/*.cpp")
file(GLOB r2fg_SRC "src/r2fg/*.cpp")
file(GLOB r3fg_SRC "src/r3fg/*.cpp")
file(GLOB ur5_cont_control_SRC "src/ur5_continuous_controller/*.cpp")

add_executable(ur5 ${ur5_SRC})
target_link_libraries(ur5 ${catkin_LIBRARIES})
add_dependencies(ur5 irl_robots_generate_messages_cpp)

add_executable(r2fg ${r2fg_SRC})
target_link_libraries(r2fg ${catkin_LIBRARIES})
add_dependencies(r2fg irl_robots_generate_messages_cpp)

add_executable(r3fg ${r3fg_SRC})
target_link_libraries(r3fg ${catkin_LIBRARIES})
add_dependencies(r3fg irl_robots_generate_messages_cpp)

add_executable(ur5_cont_control ${ur5_cont_control_SRC})
target_link_libraries(ur5_cont_control ${catkin_LIBRARIES})
add_dependencies(ur5_cont_control irl_robots_generate_messages_cpp)

if(${vrep_LIBRARIES})
    file(GLOB ur5_virtual_SRC "src/ur5_virtual/*.cpp")
    file(GLOB football_virtual_SRC "src/football_virtual/*.cpp")

    add_executable(ur5_virtual ${ur5_virtual_SRC})
    target_link_libraries(ur5_virtual ${catkin_LIBRARIES} ${vrep_LIBRARIES})
    add_dependencies(ur5_virtual irl_robots_generate_messages_cpp)

    add_executable(football_virtual ${football_virtual_SRC})
    target_link_libraries(football_virtual ${catkin_LIBRARIES} ${vrep_LIBRARIES})
    add_dependencies(football_virtual irl_robots_generate_messages_cpp)
else()
    message("Skipping build of virtual robot interfaces as VREP has not been found.")
endif()
